css/style.css
header {
    padding: 5px;
    font-family: 'Exo 2', sans-serif;
    background-color: #4B4A49;
    flex-wrap: wrap;
}

h1 {
    color: white;
    text-align: center;
    font-size: 40px;
}

.flex-container {
    display: flex;
    flex-wrap: wrap;
    height: 100%;
    width: 100%;
    background-color: white;
}

.flex-column {
    width: 20%;
    height: auto;
    border-right: 2px solid none;
    background-color: lightgray;
    list-style-type: none;
}

.flex-column h2,
.flex-column p {
    margin-left: 10px;
}

.column-container {
    width: 80%;
    justify-content: right;
}

.row {
    padding: 0 30px 0 30px;
}

.city-row {
    height: auto;
    background-color: white;
    margin: 20px;
    border: 2px solid darkgrey;
    justify-content: right;
}

.weekly-row {
    height: auto;
    background-color: white;
    margin: 20px 0 20px 20px;
    flex-direction: row;
}

button {
    width: 100%;
    margin-bottom: 1rem;
}

